--- a/app/src/main/res/layout/fragment_choose_seat.xml
+++ b/app/src/main/res/layout/fragment_choose_seat.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/White"
     android:padding="5dp"
     android:layout_height="match_parent"
     tools:context=".ChooseSeatFragment">
