--- a/app/src/main/res/layout/fragment_choose_session.xml
+++ b/app/src/main/res/layout/fragment_choose_session.xml
@@ -6,20 +6,20 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".ChooseSaloonFragment">
+    tools:context=".ChooseSessionFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:id="@+id/saloon1"
+        android:id="@+id/session1"
         android:layout_gravity="right"
         app:cardBackgroundColor="@color/Orange"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
 
         <TextView
-            android:text="Salon 1"
+            android:text="Seans 1 : 10.00-12.00"
             android:gravity="center"
             android:padding="15dp"
             android:layout_width="match_parent"
@@ -35,14 +35,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:id="@+id/saloon2"
+        android:id="@+id/session2"
         android:layout_gravity="right"
         app:cardBackgroundColor="@color/Orange"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
 
         <TextView
-            android:text="Salon 2"
+            android:text="Seans 2 : 13.00-15.00"
             android:gravity="center"
             android:padding="15dp"
             android:layout_width="match_parent"
@@ -58,14 +58,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:id="@+id/saloon3"
+        android:id="@+id/session3"
         android:layout_gravity="right"
         app:cardBackgroundColor="@color/Orange"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
 
         <TextView
-            android:text="Salon 3"
+            android:text="Seans 3 : 16.00-18.00"
             android:gravity="center"
             android:padding="15dp"
             android:layout_width="match_parent"
@@ -76,4 +76,58 @@
             android:textStyle="bold"></TextView>
 
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:id="@+id/session4"
+        android:layout_gravity="right"
+        app:cardBackgroundColor="@color/Orange"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
+
+        <TextView
+            android:text="Seans 4 : 19.00-21.00"
+            android:gravity="center"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:textColor="@color/White"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:id="@+id/session5"
+        android:layout_gravity="right"
+        app:cardBackgroundColor="@color/Orange"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
+
+        <TextView
+            android:text="Seans 5 : 22.00-00.00"
+            android:gravity="center"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:textColor="@color/White"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
+
+    </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
 </LinearLayout>
