--- a/app/src/main/res/layout/fragment_ticket_menu.xml
+++ b/app/src/main/res/layout/fragment_ticket_menu.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".TicketMenuFragment">
 
-    <TextView
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/buy_ticket_button"
         android:text="Bilet Satın Al"
-        android:id="@+id/buy_ticket_tv"/>
+        android:background="@color/Orange"
+        android:textSize="20dp"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:id="@+id/film_image_menu"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/film_name_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/film_director_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
