--- a/app/src/main/res/layout/alertlayout_employee.xml
+++ b/app/src/main/res/layout/alertlayout_employee.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/alert_info_tv"
-        android:text="Alert Information"
+        android:id="@+id/alert_info_tv_emp"
+        android:text="Çalışan Bilgisi"
         android:textStyle="bold"
         android:textColor="@color/White"
         android:textSize="18dp"
@@ -15,21 +16,35 @@
         android:layout_height="wrap_content" />
 
     <EditText
-        android:id="@+id/budget_operation_et"
+        android:id="@+id/employee_fullname_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:hint="İşlemi giriniz" />
+        android:layout_height="wrap_content"
+        android:hint="İsmini giriniz" />
 
     <EditText
-        android:id="@+id/budget_amount_et"
+        android:id="@+id/employee_position_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:hint="Miktarı giriniz" />
+        android:hint="Pozisyonu giriniz" />
+
+    <EditText
+        android:id="@+id/employee_age_et"
+        android:layout_width="match_parent"
+        android:layout_margin="2dp"
+        android:layout_height="wrap_content"
+        android:hint="Yaşı giriniz" />
+
+    <EditText
+        android:id="@+id/employee_salary_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:hint="Maaşı giriniz" />
 
     <Button
-        android:id="@+id/alert_cancel_button"
+        android:id="@+id/alert_cancel_button2"
         android:layout_width="wrap_content"
         android:layout_gravity="right"
         android:layout_margin="4dp"
@@ -43,7 +58,7 @@
         android:layout_margin="4dp"
         android:layout_gravity="right"
         android:text="Ekle"
-        android:id="@+id/alert_add_button"
+        android:id="@+id/alert_add_button2"
         android:layout_height="wrap_content"/>
 
 
