--- a/app/src/main/res/layout/fragment_ticket_menu.xml
+++ b/app/src/main/res/layout/fragment_ticket_menu.xml
@@ -50,6 +50,46 @@
                 android:layout_margin="10dp"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/film_writer_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/film_release_date_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/genre_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/actors_tv_menu"
+                android:textColorHint="@color/White"
+                android:textColor="@color/White"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_margin="10dp"
+                android:layout_height="wrap_content"/>
+
 
         </LinearLayout>
 
