--- a/app/src/main/res/layout/activity_get_ticket_info.xml
+++ b/app/src/main/res/layout/activity_get_ticket_info.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GetDataActivities.GetInfoFromDatabaseActivity">
+    tools:context=".GetDataActivities.GetTicketInfoActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
