--- a/app/src/main/res/layout/activity_get_budget_info_from_database.xml
+++ b/app/src/main/res/layout/activity_get_budget_info_from_database.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GetBudgetInfoFromDatabase">
+    tools:context=".GetDataActivities.GetBudgetInfoFromDatabase">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
